infrastructure/kubernetes/foundational/istio/istio-installation.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    istio-injection: disabled
